chore: new translations apps-journeys-admin.json Chinese Simplified

--- a/libs/locales/zh-Hans-CN/apps-journeys-admin.json
+++ b/libs/locales/zh-Hans-CN/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "访客",
   "Filters": "过滤器",
   "A Few Questions": "几个问题",
+  "User Insights": "用户洞察",
   "a question about onboarding form": "关于入职表格的问题",
   "Edit Template": "编辑模板",
   "Access Denied": "拒绝访问",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "访客活动",
   "Visitor Details": "访客详情",
   "New Team": "新团队",
+  "Create a Team": "创建团队",
   "A question about creating a team for the first time.": "关于第一次创建团队的问题。",
   "Journey Template": "旅程模板",
   "Journey Templates": "旅程模板",
   "Sign In": "登入",
+  "Create New Account or Log in": "创建新账户或登录",
+  "A question about sign in": "关于登录的问题",
   "Terms and Conditions": "条款和条件",
   "A question about the terms and conditions form": "关于条款和条件表格的问题",
   "Required": "必需的",
-  "Validate NextStep Email": "验证 NextStep 电子邮件",
   "Verify Your Email": "验证您的电子邮件",
-  "To start making NextSteps journeys": "开始 NextSteps 之旅",
+  "Validate NextStep Email": "验证 NextStep 电子邮件",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "我们已向这个地址发送了电子邮件，其中包含验证您的帐户的链接。如果几分钟后您仍未收到该电子邮件，请检查您的垃圾邮件文件夹。",
   "Resend Validation Email": "重新发送验证电子邮件",
   "Verify With Code Instead": "用代码代替验证",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "您确定要更换语言吗？",
   "Reports": "报告",
   "See all": "查看全部",
-  "Help us serve you better": "帮助我们更好地为您服务",
   "Next": "下一个",
+  "Create an account": "创建账户",
+  "Let's get you on the journey": "让我们带您踏上旅程",
   "Feedback & Support": "反馈",
   "Create Custom Journey": "创建定制旅程",
   "Template": "模板",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "您已经使用过 {{userEmail}}。",
   "Sign in with {{service}} to continue": "登录 {{service}} 继续",
   "Please enter your email address": "请输入您的电子邮件地址",
-  "Log in or Sign up": "登录 或 注册",
-  "No account? We'll create one for you automatically.": "没有账户？我们会自动为您创建一个。",
   "OR": "或",
   "Enter your email address here": "在此输入您的电子邮件地址",
-  "Sign in with email": "使用电子邮件登录",
+  "Continue with email": "继续发送电子邮件",
   "Enter your password": "输入密码",
   "The email and password you entered don't match": "您输入的电子邮件和密码不匹配",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "您输入错误密码的次数过多。请几分钟后再试一次。",
@@ -589,7 +591,9 @@
   "Sign Up": "注册",
   "Check your email": "查看电子邮件",
   "Follow the instructions sent to {{userEmail}} to recover your password": "按照发送到 {{userEmail}} 的说明找回密码",
-  "Sign in with {{service}}": "登录 {{service}}",
+  "Continue with {{service}}": "继续 {{service}}",
+  "New account": "新账户",
+  "Log In": "登录",
   "Active": "活跃",
   "Archived": "存档",
   "Strategy": "战略",
@@ -644,10 +648,6 @@
   "Members": "会员",
   "Custom Domain": "自定义域名",
   "Rename": "改名",
-  "Invite Teammates": "邀请队友",
-  "Invite team members": "邀请团队成员",
-  "Continue": "继续",
-  "Skip": "跳过",
   "Shared With Me": "与我分享",
   "More journeys here": "更多旅程在这里",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "旅程按团队分组。",
@@ -687,13 +687,16 @@
   "Most Relevant": "最相关",
   "No template fully matches your search criteria.": "没有模板完全符合您的搜索条件。",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "尝试使用更少的过滤器或在下面查找与您选择搜索的类别相关的模板",
+  "We Like Your Choice!": "我们喜欢你的选择",
+  "Create a new account or log in to use this template as yours.": "创建新账户或登录后即可使用此模板。",
+  "Login with my account": "用我的账户登录",
+  "Create a new account": "创建新账户",
   "Use This Template": "使用此模板",
   "Add Journey to Team": "将旅程添加到团队",
   "Use this template to make it your journey": "使用此模板使其成为您的旅程",
   "Use this template to see more!": "使用此模板查看更多内容！",
   "Related Templates": "相关模板",
-  "Before You Start": "在你开始之前",
-  "Please review these documents:": "请查看这些文件：",
+  "Before you start, please review these documents:": "在开始之前，请先阅读这些文件：",
   "Terms of Use": "使用条款",
   "End User License Agreement": "最终用户许可协议",
   "Community Guidelines": "社区指南",
