--- a/libs/locales/zh-Hant-TW/apps-journeys-admin.json
+++ b/libs/locales/zh-Hant-TW/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "訪客",
   "Filters": "過濾器",
   "A Few Questions": "幾個問題",
+  "User Insights": "User Insights",
   "a question about onboarding form": "關於入職表格的問題",
   "Edit Template": "編輯模板",
   "Access Denied": "拒絕訪問",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "訪客活動",
   "Visitor Details": "訪客詳情",
   "New Team": "新團隊",
+  "Create a Team": "Create a Team",
   "A question about creating a team for the first time.": "關於第一次創建團隊的問題。",
   "Journey Template": "旅程模板",
   "Journey Templates": "旅程模板",
   "Sign In": "登入",
+  "Create New Account or Log in": "Create New Account or Log in",
+  "A question about sign in": "A question about sign in",
   "Terms and Conditions": "條款與條件",
   "A question about the terms and conditions form": "關於條款和條件表格的問題",
   "Required": "必需的",
-  "Validate NextStep Email": "Validate NextStep Email",
   "Verify Your Email": "Verify Your Email",
-  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Validate NextStep Email": "Validate NextStep Email",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
   "Resend Validation Email": "Resend Validation Email",
   "Verify With Code Instead": "Verify With Code Instead",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "報告",
   "See all": "看全部",
-  "Help us serve you better": "幫助我們更好地為您服務",
   "Next": "下一個",
+  "Create an account": "Create an account",
+  "Let's get you on the journey": "Let's get you on the journey",
   "Feedback & Support": "回饋",
   "Create Custom Journey": "創建客製化旅程",
   "Template": "範本",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "You've already used {{userEmail}}.",
   "Sign in with {{service}} to continue": "Sign in with {{service}} to continue",
   "Please enter your email address": "Please enter your email address",
-  "Log in or Sign up": "Log in or Sign up",
-  "No account? We'll create one for you automatically.": "No account? We'll create one for you automatically.",
   "OR": "OR",
   "Enter your email address here": "Enter your email address here",
-  "Sign in with email": "Sign in with email",
+  "Continue with email": "Continue with email",
   "Enter your password": "Enter your password",
   "The email and password you entered don't match": "The email and password you entered don't match",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "You have entered an incorrect password too many times. Please try again in a few minutes.",
@@ -589,7 +591,9 @@
   "Sign Up": "Sign Up",
   "Check your email": "Check your email",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Follow the instructions sent to {{userEmail}} to recover your password",
-  "Sign in with {{service}}": "Sign in with {{service}}",
+  "Continue with {{service}}": "Continue with {{service}}",
+  "New account": "New account",
+  "Log In": "Log In",
   "Active": "Active",
   "Archived": "Archived",
   "Strategy": "策略",
@@ -644,10 +648,6 @@
   "Members": "會員",
   "Custom Domain": "Custom Domain",
   "Rename": "改名",
-  "Invite Teammates": "邀請隊友",
-  "Invite team members": "邀請團隊成員",
-  "Continue": "繼續",
-  "Skip": "跳過",
   "Shared With Me": "與我分享",
   "More journeys here": "更多旅程在這裡",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "旅程按團隊分組。",
@@ -687,13 +687,16 @@
   "Most Relevant": "最相關",
   "No template fully matches your search criteria.": "沒有模板完全符合您的搜尋條件。",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "嘗試使用較少的篩選器或在下方尋找與您選擇搜尋的類別相關的模板",
+  "We Like Your Choice!": "We Like Your Choice!",
+  "Create a new account or log in to use this template as yours.": "Create a new account or log in to use this template as yours.",
+  "Login with my account": "Login with my account",
+  "Create a new account": "Create a new account",
   "Use This Template": "使用此模板",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "使用此模板使其成為您的旅程",
   "Use this template to see more!": "Use this template to see more!",
   "Related Templates": "相關模板",
-  "Before You Start": "在你開始之前",
-  "Please review these documents:": "請查看這些文件：",
+  "Before you start, please review these documents:": "Before you start, please review these documents:",
   "Terms of Use": "Terms of Use",
   "End User License Agreement": "End User License Agreement",
   "Community Guidelines": "Community Guidelines",
