--- a/libs/locales/id-ID/apps-journeys-admin.json
+++ b/libs/locales/id-ID/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "Pengunjung",
   "Filters": "Filter",
   "A Few Questions": "Beberapa Pertanyaan",
+  "User Insights": "Wawasan Pengguna",
   "a question about onboarding form": "pertanyaan tentang formulir orientasi",
   "Edit Template": "Edit Template",
   "Access Denied": "Akses Ditolak",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "Aktivitas Pengunjung",
   "Visitor Details": "Detail Pengunjung",
   "New Team": "Tim Baru",
+  "Create a Team": "Buat Tim",
   "A question about creating a team for the first time.": "Sebuah pertanyaan tentang membuat tim untuk pertama kalinya.",
   "Journey Template": "Templat Perjalanan",
   "Journey Templates": "Templat Perjalanan",
   "Sign In": "Masuk",
+  "Create New Account or Log in": "Buat Akun Baru atau Masuk",
+  "A question about sign in": "Pertanyaan tentang masuk",
   "Terms and Conditions": "Syarat dan Ketentuan",
   "A question about the terms and conditions form": "Pertanyaan tentang formulir syarat dan ketentuan",
   "Required": "Diperlukan",
-  "Validate NextStep Email": "Validasi Email Langkah Berikutnya",
   "Verify Your Email": "Verifikasi Email Anda",
-  "To start making NextSteps journeys": "Untuk mulai melakukan perjalanan NextSteps",
+  "Validate NextStep Email": "Validasi Email Langkah Berikutnya",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email telah dikirim ke alamat ini dengan tautan untuk memverifikasi akun Anda. Jika Anda belum menerima email setelah beberapa menit, periksa folder spam Anda.",
   "Resend Validation Email": "Kirim Ulang Email Validasi",
   "Verify With Code Instead": "Verifikasi Dengan Kode Sebagai Gantinya",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "Apakah Anda yakin ingin mengubah bahasa?",
   "Reports": "Laporan",
   "See all": "Lihat semua",
-  "Help us serve you better": "Bantu kami melayani Anda dengan lebih baik",
   "Next": "Berikutnya",
+  "Create an account": "Membuat akun",
+  "Let's get you on the journey": "Mari kita mulai perjalanan Anda",
   "Feedback & Support": "Umpan Balik & Dukungan",
   "Create Custom Journey": "Buat Perjalanan Khusus",
   "Template": "Templat",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "Anda telah menggunakan {{userEmail}}.",
   "Sign in with {{service}} to continue": "Masuk dengan {{service}} untuk melanjutkan",
   "Please enter your email address": "Silakan masukkan alamat email Anda",
-  "Log in or Sign up": "Masuk atau Daftar",
-  "No account? We'll create one for you automatically.": "Tidak punya akun? Kami akan membuatkan akun untuk Anda secara otomatis.",
   "OR": "ATAU",
   "Enter your email address here": "Masukkan alamat email Anda di sini",
-  "Sign in with email": "Masuk dengan email",
+  "Continue with email": "Lanjutkan dengan email",
   "Enter your password": "Masukkan kata sandi Anda",
   "The email and password you entered don't match": "Email dan kata sandi yang Anda masukkan tidak cocok",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "Anda memasukkan kata sandi yang salah terlalu sering. Silakan coba lagi dalam beberapa menit.",
@@ -589,7 +591,9 @@
   "Sign Up": "Daftar",
   "Check your email": "Periksa email Anda",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Ikuti petunjuk yang dikirim ke {{userEmail}} untuk memulihkan kata sandi Anda",
-  "Sign in with {{service}}": "Masuk dengan {{service}}",
+  "Continue with {{service}}": "Lanjutkan dengan {{service}}",
+  "New account": "Akun baru",
+  "Log In": "Masuk",
   "Active": "Aktif",
   "Archived": "Diarsipkan",
   "Strategy": "Strategi",
@@ -644,10 +648,6 @@
   "Members": "Anggota",
   "Custom Domain": "Domain Khusus",
   "Rename": "Ganti nama",
-  "Invite Teammates": "Undang Rekan Tim",
-  "Invite team members": "Undang anggota tim",
-  "Continue": "Lanjutkan",
-  "Skip": "Lewati",
   "Shared With Me": "Dibagikan Dengan Saya",
   "More journeys here": "Lebih banyak perjalanan di sini",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "Perjalanan dikelompokkan berdasarkan tim. Anda dapat beralih di antara tim dengan menggunakan menu tarik-turun ini.",
@@ -687,13 +687,16 @@
   "Most Relevant": "Paling Relevan",
   "No template fully matches your search criteria.": "Tidak ada templat yang sepenuhnya cocok dengan kriteria pencarian Anda.",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "Coba gunakan lebih sedikit filter atau lihat di bawah ini untuk templat yang terkait dengan kategori yang Anda pilih untuk dicari",
+  "We Like Your Choice!": "Kami menyukai pilihan Anda!",
+  "Create a new account or log in to use this template as yours.": "Buat akun baru atau masuk untuk menggunakan templat ini sebagai milik Anda.",
+  "Login with my account": "Masuk dengan akun saya",
+  "Create a new account": "Membuat akun baru",
   "Use This Template": "Gunakan Templat Ini",
   "Add Journey to Team": "Tambahkan Perjalanan ke Tim",
   "Use this template to make it your journey": "Gunakan templat ini untuk membuat perjalanan Anda",
   "Use this template to see more!": "Gunakan templat ini untuk melihat lebih banyak!",
   "Related Templates": "Templat Terkait",
-  "Before You Start": "Sebelum Anda Mulai",
-  "Please review these documents:": "Silakan tinjau dokumen-dokumen ini:",
+  "Before you start, please review these documents:": "Sebelum memulai, silakan tinjau dokumen-dokumen ini:",
   "Terms of Use": "Ketentuan Penggunaan",
   "End User License Agreement": "Perjanjian Lisensi Pengguna Akhir",
   "Community Guidelines": "Pedoman Komunitas",
