--- a/libs/locales/tl-PH/apps-journeys-admin.json
+++ b/libs/locales/tl-PH/apps-journeys-admin.json
@@ -16,6 +16,7 @@
   "Visitors": "Mga bisita",
   "Filters": "Mga filter",
   "A Few Questions": "Iilang tanong",
+  "User Insights": "User Insights",
   "a question about onboarding form": "isang tanong tungkol sa onboarding form",
   "Edit Template": "I-edit ang Template",
   "Access Denied": "Walang pahintulot",
@@ -26,16 +27,18 @@
   "Visitor's Activity": "Aktibidad ng Bisita",
   "Visitor Details": "Mga Detalye ng Bisita",
   "New Team": "Bagong Koponan",
+  "Create a Team": "Create a Team",
   "A question about creating a team for the first time.": "Isang tanong tungkol sa paggawa ng team sa unang pagkakataon.",
   "Journey Template": "Template ng Paglalakbay",
   "Journey Templates": "Mga Template ng Paglalakbay",
   "Sign In": "Mag-sign In",
+  "Create New Account or Log in": "Create New Account or Log in",
+  "A question about sign in": "A question about sign in",
   "Terms and Conditions": "Mga Tuntunin at Kundisyon",
   "A question about the terms and conditions form": "Isang tanong tungkol sa form ng mga tuntunin at kundisyon",
   "Required": "Kailangan",
-  "Validate NextStep Email": "Validate NextStep Email",
   "Verify Your Email": "Verify Your Email",
-  "To start making NextSteps journeys": "To start making NextSteps journeys",
+  "Validate NextStep Email": "Validate NextStep Email",
   "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.": "Email has been sent to this address with a link to verify your account. If you have not received the email after a few minutes, please check your spam folder.",
   "Resend Validation Email": "Resend Validation Email",
   "Verify With Code Instead": "Verify With Code Instead",
@@ -535,8 +538,9 @@
   "Are you sure you want to change language?": "Are you sure you want to change language?",
   "Reports": "Mga ulat",
   "See all": "Ipakita lahat",
-  "Help us serve you better": "Tulungan kaming paglingkuran ka ng mas mahusay",
   "Next": "Susunod",
+  "Create an account": "Create an account",
+  "Let's get you on the journey": "Let's get you on the journey",
   "Feedback & Support": "Feedback",
   "Create Custom Journey": "Gumawa ng Custom na Paglalakbay",
   "Template": "Template",
@@ -564,11 +568,9 @@
   "You've already used {{userEmail}}.": "You've already used {{userEmail}}.",
   "Sign in with {{service}} to continue": "Sign in with {{service}} to continue",
   "Please enter your email address": "Please enter your email address",
-  "Log in or Sign up": "Log in or Sign up",
-  "No account? We'll create one for you automatically.": "No account? We'll create one for you automatically.",
   "OR": "OR",
   "Enter your email address here": "Enter your email address here",
-  "Sign in with email": "Sign in with email",
+  "Continue with email": "Continue with email",
   "Enter your password": "Enter your password",
   "The email and password you entered don't match": "The email and password you entered don't match",
   "You have entered an incorrect password too many times. Please try again in a few minutes.": "You have entered an incorrect password too many times. Please try again in a few minutes.",
@@ -589,7 +591,9 @@
   "Sign Up": "Sign Up",
   "Check your email": "Check your email",
   "Follow the instructions sent to {{userEmail}} to recover your password": "Follow the instructions sent to {{userEmail}} to recover your password",
-  "Sign in with {{service}}": "Sign in with {{service}}",
+  "Continue with {{service}}": "Continue with {{service}}",
+  "New account": "New account",
+  "Log In": "Log In",
   "Active": "Active",
   "Archived": "Archived",
   "Strategy": "Diskarte",
@@ -644,10 +648,6 @@
   "Members": "Mga miyembro",
   "Custom Domain": "Custom Domain",
   "Rename": "Palitan ang pangalan",
-  "Invite Teammates": "Mag-imbita ng mga Teammates",
-  "Invite team members": "Mag-imbita ng mga miyembro ng pangkat",
-  "Continue": "Magpatuloy",
-  "Skip": "Laktawan",
   "Shared With Me": "Ibinahagi Sa Akin",
   "More journeys here": "Higit pang mga paglalakbay dito",
   "Journeys are grouped by teams. You can switch between teams by using this dropdown.": "Ang mga paglalakbay ay pinagsama ayon sa mga koponan. ",
@@ -687,13 +687,16 @@
   "Most Relevant": "Pinakamahalaga",
   "No template fully matches your search criteria.": "Walang template na ganap na tumutugma sa iyong pamantayan sa paghahanap.",
   "Try using fewer filters or look below for templates related to the categories you've selected to search": "Subukang gumamit ng mas kaunting mga filter o tumingin sa ibaba para sa mga template na nauugnay sa mga kategoryang pinili mong hanapin",
+  "We Like Your Choice!": "We Like Your Choice!",
+  "Create a new account or log in to use this template as yours.": "Create a new account or log in to use this template as yours.",
+  "Login with my account": "Login with my account",
+  "Create a new account": "Create a new account",
   "Use This Template": "Gamitin ang Template na Ito",
   "Add Journey to Team": "Add Journey to Team",
   "Use this template to make it your journey": "Gamitin ang template na ito upang gawin itong iyong paglalakbay",
   "Use this template to see more!": "Use this template to see more!",
   "Related Templates": "Mga Kaugnay na Template",
-  "Before You Start": "Bago ka magsimula",
-  "Please review these documents:": "Pakisuri ang mga dokumentong ito:",
+  "Before you start, please review these documents:": "Before you start, please review these documents:",
   "Terms of Use": "Terms of Use",
   "End User License Agreement": "End User License Agreement",
   "Community Guidelines": "Community Guidelines",
