feat: add upload consent modal

--- a/libs/locales/en/apps-nexus-admin.json
+++ b/libs/locales/en/apps-nexus-admin.json
@@ -35,5 +35,7 @@
   "Resources": "Resources",
   "Table View": "Table View",
   "Update": "Update",
-  "Reset": "Reset"
+  "Upload": "Upload",
+  "Reset": "Reset",
+  "By clicking Upload, you certify that the content you are uploading complies with the YouTube Terms of Service, Please be sure not to violate others copyright or privacy rights.": "By clicking Upload, you certify that the content you are uploading complies with the YouTube Terms of Service, Please be sure not to violate others copyright or privacy rights."
 }
