--- a/apps/docs/docs/02-getting-started/02-environment-variables.mdx
+++ b/apps/docs/docs/02-getting-started/02-environment-variables.mdx
@@ -43,7 +43,9 @@ doppler login
 Open the authorization page in your browser? (Y/n) n
 ```
 
-3. Open the [authorization page](https://dashboard.doppler.com/workplace/auth/cli) to complete authorization. This will require you to login to Doppler, copy your auth code from your terminal, and give your newly minted token a name. On completion you terminal should look like the following:
+3. Open the [authorization page](https://dashboard.doppler.com/workplace/auth/cli) to complete authorization.
+   This will require you to login to Doppler, copy your auth code from your terminal, and give your newly minted
+   token a name. On completion you terminal should look like the following:
 
 ```shell
 ? Open the authorization page in your browser? No
@@ -61,3 +63,25 @@ Welcome, Brian
 ```shell
 DOPPLER_CONFIG=dev nx run-many --all --target=fetch-secrets
 ```
+
+### Getting Started without a Backend
+
+If you just want to dig right in without setting up a local backend then you run the following command:
+
+```shell
+DOPPLER_CONFIG=stg_dev nx run-many --projects=tag:doppler_config:stg_dev --target=fetch-secrets
+```
+
+This will point your local frontend projects to our stage api-gateway so you can get started right away.
+For example you can start the journeys application using the following command:
+
+```shell
+nx run journeys:serve
+```
+
+The key difference is the environment variable `DOPPLER_CONFIG=stg_dev` tells doppler to get enviroment variables
+for the stg_dev environment of the relevant project instead. You can revert this change by following step 4 of
+this guide again.
+
+You can skip ahead to step 2 in [4. Starting Projects](/docs/getting-started/running-projects) guide
+if getting started without a backend.
