feat: add switchy short links

--- a/libs/locales/en/apps-nexus-admin.json
+++ b/libs/locales/en/apps-nexus-admin.json
@@ -37,5 +37,8 @@
   "Update": "Update",
   "Upload": "Upload",
   "By clicking Upload, you certify that the content you are uploading complies with the YouTube Terms of Service, Please be sure not to violate others copyright or privacy rights.": "By clicking Upload, you certify that the content you are uploading complies with the YouTube Terms of Service, Please be sure not to violate others copyright or privacy rights.",
-  "Reset": "Reset"
+  "Reset": "Reset",
+  "Create short link": "Create short link",
+  "Domain": "Domain",
+  "Pick redirections template": "Pick redirections template"
 }
