chore: add i18n text

--- a/libs/locales/en/apps-nexus-admin.json
+++ b/libs/locales/en/apps-nexus-admin.json
@@ -40,5 +40,6 @@
   "Reset": "Reset",
   "Create short link": "Create short link",
   "Domain": "Domain",
-  "Pick redirections template": "Pick redirections template"
+  "Pick redirections template": "Pick redirections template",
+  "Generate Template": "Generate Template"
 }
