chore: add i18n literals

--- a/libs/locales/en/apps-nexus-admin.json
+++ b/libs/locales/en/apps-nexus-admin.json
@@ -10,6 +10,8 @@
   "Choose Video Folder": "Choose Video Folder",
   "Cancel": "Cancel",
   "Import from Youtube Template": "Import from Youtube Template",
+  "Generate Template": "Generate Template",
+  "Create short link": "Create short link",
   "Nexus": "Nexus",
   "Youtube Uploader": "Youtube Uploader",
   "Batch Number": "Batch Number",
@@ -28,18 +30,17 @@
   "Platform Type": "Platform Type",
   "Youtube": "Youtube",
   "Create": "Create",
+  "Domain": "Domain",
+  "Pick redirections template": "Pick redirections template",
   "Login": "Login",
   "Welcome to Nexus": "Welcome to Nexus",
   "Hi": "Hi",
   "Logout": "Logout",
   "Resources": "Resources",
   "Table View": "Table View",
+  "Short Links": "Short Links",
   "Update": "Update",
   "Upload": "Upload",
   "By clicking Upload, you certify that the content you are uploading complies with the YouTube Terms of Service, Please be sure not to violate others copyright or privacy rights.": "By clicking Upload, you certify that the content you are uploading complies with the YouTube Terms of Service, Please be sure not to violate others copyright or privacy rights.",
-  "Reset": "Reset",
-  "Create short link": "Create short link",
-  "Domain": "Domain",
-  "Pick redirections template": "Pick redirections template",
-  "Generate Template": "Generate Template"
+  "Reset": "Reset"
 }
