feat: update text translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -199,6 +199,7 @@
   "Complete": "Complete",
   "Incomplete": "Incomplete",
   "Image Source": "Image Source",
+  "To edit poll content, choose each option individually.": "To edit poll content, choose each option individually.",
   "Button Icon": "Button Icon",
   "Cards": "Cards",
   "Conditions": "Conditions",
@@ -272,6 +273,7 @@
   "Image Properties": "Image Properties",
   "Typography Properties": "Typography Properties",
   "Button Properties": "Button Properties",
+  "Poll Block Selected": "Poll Block Selected",
   "Poll Option Properties": "Poll Option Properties",
   "Subscribe Properties": "Subscribe Properties",
   "Feedback Properties": "Feedback Properties",
