--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -515,7 +515,7 @@
   "min": "min",
   "Change Language": "Change Language",
   "Revert": "Revert",
-  "Are you sure you want to change language?": "Are you sure you want to change language?",
+  "Would you like to revert to previous language?": "Would you like to revert to previous language?",
   "Reports": "Reports",
   "See all": "See all",
   "Next": "Next",
