feat: add export data to google sheet

--- a/libs/locales/en/apps-nexus-admin.json
+++ b/libs/locales/en/apps-nexus-admin.json
@@ -10,7 +10,7 @@
   "Choose Video Folder": "Choose Video Folder",
   "Cancel": "Cancel",
   "Import from Youtube Template": "Import from Youtube Template",
-  "Generate Template": "Generate Template",
+  "Export database data": "Export database data",
   "Create short link": "Create short link",
   "Nexus": "Nexus",
   "Youtube Uploader": "Youtube Uploader",
