refactor: variable naming

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -329,6 +329,7 @@
   "Depression": "Depression",
   "Unsplash": "Unsplash",
   "Featured Images": "Featured Images",
+  "Loading...": "Loading...",
   "Load More": "Load More",
   "Search by keyword": "Search by keyword",
   "Image is uploading...": "Image is uploading...",
