--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -84,7 +84,9 @@
   "Edit": "Edit",
   "Add Block": "Add Block",
   "Fill this card with content": "Fill this card with content",
-  "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>": "<0>Select Card Template</0><1>or add blocks from the list below ⤵</1>",
+  "Select Card Template": "Select Card Template",
+  "or add blocks using the": "or add blocks using the",
+  "button below": "button below",
   "Edit text...": "Edit text...",
   "Type your text here...": "Type your text here...",
   "Add New Option": "Add New Option",
