--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -84,7 +84,7 @@
   "Edit": "Edit",
   "Add Block": "Add Block",
   "Fill this card with content": "Fill this card with content",
-  "<0>Select Card Template</0><1>is a test of the typing thing that lets it type automatically or add blocks using the<1></1>button below</1>": "<0>Select Card Template</0><1>is a test of the typing thing that lets it type automatically or add blocks using the<1></1>button below</1>",
+  "<0>Select Card Template</0><1>or add blocks using the<1></1>button below</1>": "<0>Select Card Template</0><1>or add blocks using the<1></1>button below</1>",
   "Edit text...": "Edit text...",
   "Type your text here...": "Type your text here...",
   "Add New Option": "Add New Option",
