feat: social node edge

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -117,6 +117,7 @@
   "<0>{count}</0><1>card</1>_other": "<0>{count}</0><1>card</1>",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
+  "Start": "Start",
   "Button": "Button",
   "Form": "Form",
   "Option": "Option",
