chore: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -118,12 +118,15 @@
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Start": "Start",
+  "Drag to connect": "Drag to connect",
   "Button": "Button",
   "Form": "Form",
   "Option": "Option",
   "Subscribe": "Subscribe",
   "Feedback": "Feedback",
   "Video": "Video",
+  "Next Step →": "Next Step →",
+  "Click to edit or drag": "Click to edit or drag",
   "Add a block": "Add a block",
   "Image": "Image",
   "Option 1": "Option 1",
