fix: test and lint

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -118,6 +118,7 @@
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
   "Start": "Start",
+  "Add Step": "Add Step",
   "Drag to connect": "Drag to connect",
   "Button": "Button",
   "Form": "Form",
