--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -96,8 +96,7 @@
   "Cancel": "Cancel",
   "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
   "Delete {{ label }}": "Delete {{ label }}",
-  "{{ blockLabel }} Duplicated": "{{ blockLabel }} Duplicated",
-  "Duplicate {{ blockLabel }}": "Duplicate {{ blockLabel }}",
+  "Block Duplicated": "Block Duplicated",
   "Every Journey has a goal": "Every Journey has a goal",
   "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:": "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:",
   "Check all URLs and actions used in the journey": "Check all URLs and actions used in the journey",
@@ -128,6 +127,8 @@
   "Video": "Video",
   "Next Step →": "Next Step →",
   "Click to edit or drag": "Click to edit or drag",
+  "Card Duplicated": "Card Duplicated",
+  "Duplicate Card": "Duplicate Card",
   "Add a block": "Add a block",
   "Image": "Image",
   "Option 1": "Option 1",
