refactor: journey flow 🇨🇦 (#2690)
Co-authored-by: Vlad <hi.vladimir@me.com>
Co-authored-by: Tataihono Nikora <tataihono.nikora@gmail.com>
Co-authored-by: John Geronimo <johnageronimo1@gmail.com>
Co-authored-by: Levi Zustiak <91484241+levi-zustiak@users.noreply.github.com>

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -96,8 +96,7 @@
   "Cancel": "Cancel",
   "Are you sure you would like to delete this card?": "Are you sure you would like to delete this card?",
   "Delete {{ label }}": "Delete {{ label }}",
-  "{{ blockLabel }} Duplicated": "{{ blockLabel }} Duplicated",
-  "Duplicate {{ blockLabel }}": "Duplicate {{ blockLabel }}",
+  "Block Duplicated": "Block Duplicated",
   "Every Journey has a goal": "Every Journey has a goal",
   "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:": "On this screen you will see all your goals and actions listed in a single table. Create cards with some actions like buttons. We will list all your links and actions here so you can:",
   "Check all URLs and actions used in the journey": "Check all URLs and actions used in the journey",
@@ -117,12 +116,19 @@
   "<0>{count}</0><1>card</1>_other": "<0>{count}</0><1>card</1>",
   "Messaging App View": "Messaging App View",
   "Social App View": "Social App View",
+  "Start": "Start",
+  "Add Step": "Add Step",
+  "Drag to connect": "Drag to connect",
   "Button": "Button",
   "Form": "Form",
   "Option": "Option",
   "Subscribe": "Subscribe",
   "Feedback": "Feedback",
   "Video": "Video",
+  "Next Step →": "Next Step →",
+  "Click to edit or drag": "Click to edit or drag",
+  "Card Duplicated": "Card Duplicated",
+  "Duplicate Card": "Duplicate Card",
   "Add a block": "Add a block",
   "Image": "Image",
   "Option 1": "Option 1",
