chore: extract translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -404,6 +404,7 @@
   "Social Image": "Social Image",
   "Title": "Title",
   "Recommended length: 5 words": "Recommended length: 5 words",
+  "back to map": "back to map",
   "Analytics": "Analytics",
   "Copy Link": "Copy Link",
   "Create Template": "Create Template",
