--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -404,6 +404,7 @@
   "Social Image": "Social Image",
   "Title": "Title",
   "Recommended length: 5 words": "Recommended length: 5 words",
+  "back to map": "back to map",
   "Analytics": "Analytics",
   "Copy Link": "Copy Link",
   "Create Template": "Create Template",
@@ -720,7 +721,6 @@
   "Video Progress {{ progress }}%": "Video Progress {{ progress }}%",
   "Video expanded to fullscreen at ({{ position }})": "Video expanded to fullscreen at ({{ position }})",
   "Video completed": "Video completed",
-  "Journey": "Journey",
   "Facebook": "Facebook",
   "ID": "ID",
   "Last Active": "Last Active",
