fix: tests and translations

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -246,13 +246,16 @@
   "Selected Card": "Selected Card",
   "URL/Website": "URL/Website",
   "Navigate to:": "Navigate to:",
-  "Redirect user to the selected resource": "Redirect user to the selected resource",
   "Invalid Email": "Invalid Email",
   "Email must be a valid email": "Email must be a valid email",
+  "Open client with the provided email in the to field.": "Open client with the provided email in the to field.",
   "Paste Email here...": "Paste Email here...",
   "Invalid URL": "Invalid URL",
+  "Open new tab pointing to the provided URL.": "Open new tab pointing to the provided URL.",
   "Paste URL here...": "Paste URL here...",
   "Default Next Step defined in the current card settings.": "Default Next Step defined in the current card settings.",
+  "Navigate to the selected card (set in the map).": "Navigate to the selected card (set in the map).",
+  "back to map": "back to map",
   "Arrow Right": "Arrow Right",
   "Arrow Left": "Arrow Left",
   "Been Here": "Been Here",
@@ -404,7 +407,6 @@
   "Social Image": "Social Image",
   "Title": "Title",
   "Recommended length: 5 words": "Recommended length: 5 words",
-  "back to map": "back to map",
   "Analytics": "Analytics",
   "Copy Link": "Copy Link",
   "Create Template": "Create Template",
