fix: next step text

--- a/libs/locales/en/apps-journeys-admin.json
+++ b/libs/locales/en/apps-journeys-admin.json
@@ -125,7 +125,7 @@
   "Subscribe": "Subscribe",
   "Feedback": "Feedback",
   "Video": "Video",
-  "Next Step →": "Next Step →",
+  "Default Next Step →": "Default Next Step →",
   "Click to edit or drag": "Click to edit or drag",
   "Card Duplicated": "Card Duplicated",
   "Duplicate Card": "Duplicate Card",
